# url-dispatcher

./: .editorconfig  .gitignore  Cargo.toml  README.md
example/: config2.toml
scripts/: install.bat
src/: cli.rs  config.rs  main.rs
